--- a/css/main.css
+++ b/css/main.css
@@ -1,39 +1,29 @@
-body {
+.body {
 	height: 100%;
-	width: 100%;
+    width: 100%;
+    padding: 0 2.7 2.7 2.7;
 }
-.box {
-    margin: 40px;
-	height: 100%;
-	width: 100%;
-	background-color: #56836F;
-    border: 4px solid #006837;
+.title1 {
+	text-align: center;
 }
-.title {
-    text-align: center;
+.box{
+	margin: 40px;
+	border: 4px solid;
+	border-color:#006837;
+    background-color: #56836F;
 }
-.header{
+header{
 	padding: 40px 100px 0 0; 
 	font-size: 48px;
+    color: white;
+}
+.linav {
+	display: inline-block;
 	color: white;
+	font-size: 48px;
+	text-transform: uppercase;
 }
-.navigation{
+.logo {
 	float: right;
-	padding-top:90px;
-	padding-bottom: 100px;
-    padding-left: 100px;
+	margin: 49px 56px 0 0;
 }
-.linavigation{
-        display: inline-block;
-        font-family: 'Segoe UI Regular';
-        margin-right: 30px; 
-}
-.logo{
-    width:  170px;
-    float: right;
-     padding-top: 30px;
-    padding-left:60px;
-    }
-    .clear{
-        clear: right;
-    }
