--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,83 @@
-.box{
-    margin: 40px;
+.greenbox{
+	margin:40px 40px 40px 40px;
 	border: 4px solid;
 	border-color:#006837;
 	background-color: #56836F;
+	height: 700px;
 }
-header{
+.menu{
 	padding: 40px 100px 0 0; 
 	font-size: 48px;
 	color: white;
 }
-.navtable{
+.nav{
 	float: right;
 	padding-top:90px;
 	padding-bottom: 100px;
-	padding-left: 100px
-    }
-    .linav{
-        display: inline-block;
-        margin-right: 30px;
-    }
-    .menu{
-        color:white;
-    }
-    .logo{
-            width:  170px;
-            float: right;
-            padding-top: 30px;
-            padding-left:60px;
-    }
-    .clear{
-        clear: right;
-    }
+	padding-left: 100px;
+	
+}
+.li{
+	display: inline-block;
+	font-family: 'Segoe UI Regular';
+	margin-right: 30px;
+}
+
+.logo{
+	float: right;
+	margin-top: 56px;
+	margin-bottom: 63px;
+	padding-left:60px;
+	width:  170px;
+
+}
+.clear{
+	clear: right;
+}
+.box1 {
+	width: 571px;
+	height: 356px;
+	float: left;
+	background-color: #23206A;
+	border: 2px solid;
+	border-color: #707070;
+	margin-left: 72px;
+	margin-top: 50px;
+	margin-bottom: 80px;
+}
+.box2{
+	width: 523px;
+	float: right;
+	background-color: #23206A;
+	border: 2px solid;
+	border-color:#707070;
+	margin-bottom:80px;
+	margin-right: 50px;
+	margin-top: 55px;
+}
+.clear1{
+	clear: both;
+}
+.img1{
+width: 155px;
+float: right; 
+padding: 18px 24px 10px 10px;
+}
+.img2{
+width: 155px;
+float: left;
+padding: 18px;
+}
+.line1{
+	padding-top: 18px;
+	padding-left: 18px;
+	font-family: 'Segoe UI Regular';
+	font-size: 14px;
+	color: white;
+}
+.line2{
+	padding: 18px 0 18px 18px;
+	font-family: 'Segoe UI Regular';
+	font-size: 14px;
+	color: white;
+}
