--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,9 @@
 .nav{
 	float: right;
 	padding-top:90px;
-	padding-bottom: 100px;
-	padding-left: 100px;
+	margin-bottom: 100px;
+	margin-left: 50px;
+	margin-right:9px;
 	
 }
 .li{
@@ -27,9 +28,9 @@
 	float: right;
 	margin-top: 56px;
 	margin-bottom: 63px;
-	padding-left:60px;
+	margin-left: 60px;
+	margin-right:56px;
 	width:  170px;
-
 }
 .clear{
 	clear: right;
