--- a/styles/style.css
+++ b/styles/style.css
@@ -1,90 +1,111 @@
-html,body{
+head,body{
+	width: 100%;
 	height: 100%;
-	width:100%; 
-  }
-  body{
-	padding:3%;
-  }
-  .title {
-	text-align: center;
-	font-size: 18px;
-	margin-bottom: 4px;
-  }
-  .main {
-	height: 100%;
-	width:100%;
-	background-color:#56836F;
+}
+body{
 	padding: 2%;
-	border-color: #006837;
-	border-width: 4px;
-	border-style: solid;
-  }
-  .table1 {
-	position: relative;      
-	height: 356px;
-	width:617px;
-	padding:20px 10px;
-	background-color: yellow;
-	float: left;
-	top: 75px;
-	
-  }
-  .table2 {
-  height: 356px;
-  width: 523px;
-  padding: 20px 10px;
-  float: right;
-  position: relative;
-  background-color:yellow;
-  margin-right: 56px;
-  
-  }
-  .kompi {
-	float: right;
-	margin-right:40px;
-	width: 151.78px;
-	height: 118px;
-	position: absolute;
-	top: 10px;
-	left: 400px;
-	}
-  .kompi1 {
-	float: left;
-	margin-right:20px;
-	width: 151.78px;
-	height: 118px;
-	position: absolute;
-	top: 10px;
-	right: 330px;
-  }
-  .aqua{
+}
+.bd{
+	padding-top: 0px;
+}
+header{
+	width: 100%;
 	height: 100%;
-	width:100;
-	background: aqua;
-  }
-  .linavigation {
-	display: inline-block;
-  }
-  ul {
-	margin: 0;
-	margin-bottom: 20px;
-	padding: 0;
-	text-align: center;
-  }
-  li a{
-	display: inline-block;
-	color:white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 48px;
-  }
-  .logo {
-	float: right;
-	width: 201.2px;
-	height: 151.5px;
-	margin-bottom: 20px;
-  }
-  .clear{
+	background-color: #56836F;
+}
+header:after{
+	content: "  ";
 	clear: both;
-  }
+	display: block;
+}
+.div-0{
+	border: solid #006837 4px;
+}
+.div0{
+	margin-left: 565px;
+}
+.div0-p{
+	margin-top: 10px;
+	margin-bottom: 10px;
+	width: 112px;
+	font-size: 18px;
+	font-family: 'Myriad Pro Regular';
+}
+.logo{
+	float: right;
+	width: 201px;
+	margin-right: 55px;
+	margin-top: 35px;
+}
+.navigation{
+	display: inline-block;
+	width: 786px;
+	margin-right: 50px;
+	margin-top: 35px;
+	margin-left: 157px;
+}
+.navigation-li{
+	display: inline-block;
+}
+.navigation-a{
+	float: left;
+	font-size: 48px;
+	color:#FFFFFF;;
+	vertical-align: ;
+	margin-left: 45px;
+	font-family: 'Myriad Pro Regular';
+}
+.div1{
+	width: 100%;
+	height: 100%;
+	padding-bottom: 55px;
+	background-color: #56836F;
+}
+.div1:after{
+	content: " ";
+	clear: both;
+	display: block;
+}
+.div2{
+	background-color: #FCEE21;
+	width: 575px;
+	margin-top: 50px;
+	margin-left: 72px;
+	float: left;
+}
+.div3{
+	display: inline-block;
+}
+.div4{
+	background-color: #FCEE21;
+	width: 575px;
+	margin-top: 50px;
+	margin-right: 55px;
+	float: right;
+}
+.img{
+	float: right;
+	width: 172px;
+	padding: 3%;
+}
+.paragraph{
+	font-family: 'SegoeUI-Regular';
+	width: 560px;
+	font-size: 14px;
+	padding: 3%;
+}
+.img1{
+	float: left;
+	width: 172px;
+	padding: 3%;
+}
+#paragraph1{
+	padding-top: 0px;
+	color: #006837;
+}
+#pr2{
+	color: #006837;
+}
+#pr{
+	padding-top: 0px;
+}
