--- a/styles/style.css
+++ b/styles/style.css
@@ -1,111 +1,89 @@
-head,body{
-	width: 100%;
+html, body {
 	height: 100%;
-}
-body{
-	padding: 2%;
-}
-.bd{
-	padding-top: 0px;
-}
-header{
 	width: 100%;
-	height: 100%;
+}
+body {
+	padding: 0 2% 2% 2%
+}
+.title1 {
+	text-align: center;
+	margin-right:604px;
+	margin-top:10px;
+	color:black;
+	font-size:18px;
+}
+.maincontainer {
+	height: 700px;
+	width: 1286px;
 	background-color: #56836F;
+	border: 4px solid #006837;
+	margin:10px  40px 40px 40px;
 }
-header:after{
-	content: "  ";
-	clear: both;
-	display: block;
-}
-.div-0{
-	border: solid #006837 4px;
-}
-.div0{
-	margin-left: 565px;
-}
-.div0-p{
-	margin-top: 10px;
-	margin-bottom: 10px;
-	width: 112px;
-	font-size: 18px;
-	font-family: 'Myriad Pro Regular';
-}
-.logo{
-	float: right;
-	width: 201px;
-	margin-right: 55px;
-	margin-top: 35px;
-}
-.navigation{
+.linavigation {
 	display: inline-block;
-	width: 786px;
-	margin-right: 50px;
-	margin-top: 35px;
-	margin-left: 157px;
-}
-.navigation-li{
-	display: inline-block;
-}
-.navigation-a{
-	float: left;
+	font-family: 'Myriad Pro';
+	color: white;
 	font-size: 48px;
-	color:#FFFFFF;;
-	vertical-align: ;
-	margin-left: 45px;
-	font-family: 'Myriad Pro Regular';
 }
-.div1{
-	width: 100%;
-	height: 100%;
-	padding-bottom: 55px;
-	background-color: #56836F;
+.logo {
+	float: right;
+	margin: 49px 56px 0 0;
 }
-.div1:after{
-	content: " ";
-	clear: both;
+ul {
+	margin-top: 120px;
+}
+.menu {
+	color: white;
+	margin-left: 20px;
+}
+nav {
+	float: right;
+}
+header:after {
+	content: "";
 	display: block;
+	clear: right;
 }
-.div2{
-	background-color: #FCEE21;
-	width: 575px;
-	margin-top: 50px;
-	margin-left: 72px;
+
+.container {
+	max-width: 1160px;
+	width: 100%;
+	margin: 0 auto;
+}
+.box1 {
+	margin-top: 63.5px;
+	width: 571px ;
+	height: 356px;
+	background-color: #23206A;
 	float: left;
 }
-.div3{
-	display: inline-block;
+.box2{
+	margin-top: 63.5px;
+	width: 523px;
+	background-color: #23206A;
+	height: 356px;
+	float:right;
 }
-.div4{
-	background-color: #FCEE21;
-	width: 575px;
-	margin-top: 50px;
-	margin-right: 55px;
-	float: right;
+.margin {
+	margin: 22px 29px 18px 26px;
 }
-.img{
-	float: right;
-	width: 172px;
-	padding: 3%;
-}
-.paragraph{
-	font-family: 'SegoeUI-Regular';
-	width: 560px;
+p {
+	font-family: 'Segoe UI';
+	color: white;
 	font-size: 14px;
-	padding: 3%;
+	margin-right:8px;
 }
-.img1{
-	float: left;
-	width: 172px;
-	padding: 3%;
+.clear {
+	clear: both
 }
-#paragraph1{
-	padding-top: 0px;
-	color: #006837;
+.box-image1 {
+	float :right;
+	margin-left:70px;
+	margin-bottom: 35px;
 }
-#pr2{
-	color: #006837;
-}
-#pr{
-	padding-top: 0px;
+.box-image2 {
+	float :left;
+	margin-right:25px;
+	margin-bottom: 35px;
+
 }
