--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
 	margin-top:10px;
 	color:black;
 	font-size:18px;
-	font-family: "Myriad Pro-Regular";
+	font-family: "MyriadPro-Regular";
 }
 .maincontainer {
 	height: 700px;
@@ -22,10 +22,6 @@ body {
 }
 .linavigation {
 	display: inline-block;
-	font-family: 'Myriad Pro';
-	color: white;
-	font-size: 48px;
-	font-family: "MyriadPro-Regular";
 }
 .logo {
 	float: right;
@@ -38,6 +34,7 @@ body {
 	color: white;
 	margin-left: 20px;
 	font-family: "MyriadPro-Regular";
+	font-size:48px;
 
 }
 nav {
@@ -72,7 +69,7 @@ header:after {
 	margin: 22px 29px 18px 26px;
 }
 p {
-	font-family: 'Segoe UI';
+	font-family: "SegoeUI-Regular";
 	color: white;
 	font-size: 14px;
 	margin-right:8px;
