--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@ header:after {
 	margin: 22px 29px 18px 26px;
 }
 p {
-	font-family: "SegoeUI-Regular";
+	font-family: "SEGOEUIL";
 	color: white;
 	font-size: 14px;
 	margin-right:8px;
