--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
 	margin-top:10px;
 	color:black;
 	font-size:18px;
-	font-family: "MyriadPro-Regular";
+	font-family: "Myriad Pro-Regular";
 }
 .maincontainer {
 	height: 700px;
@@ -26,6 +26,9 @@ body {
 .logo {
 	float: right;
 	margin: 49px 56px 0 0;
+	font-family: 'Myriad Pro';
+	color: white;
+	
 }
 .ulnavigation {
 	margin-top: 120px;
@@ -69,7 +72,7 @@ header:after {
 	margin: 22px 29px 18px 26px;
 }
 p {
-	font-family: "SEGOEUIL";
+	font-family: 'Segoe UI';
 	color: white;
 	font-size: 14px;
 	margin-right:8px;
